# qspider

./: .eslintignore  .eslintrc.json  .gitignore  .gitmodules  .prettierignore  3rdpartylicenses.txt  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  _typos.toml  eslint.config.js  index.html  jest.config.js  jest.config.ts  main.0f1538e5a1c3f0aa65a0.es5.js  main.0f1538e5a1c3f0aa65a0.es5.js.LICENSE.txt  main.1434e74d3ae4f5e02036.esm.js  main.1434e74d3ae4f5e02036.esm.js.LICENSE  main.28d7c1182e69ff73.esm.js  main.28d7c1182e69ff73.esm.js.LICENSE.txt  main.2a06adff420ac46f380a.es5.js  main.2a06adff420ac46f380a.es5.js.LICENSE.txt  main.2edbad7477ab5da72395.esm.js  main.2edbad7477ab5da72395.esm.js.LICENSE.txt  main.2fa85b01356db205ebf0.es5.js  main.2fa85b01356db205ebf0.es5.js.LICENSE  main.34db3bdb3ec5e3ae50af.esm.js  main.34db3bdb3ec5e3ae50af.esm.js.LICENSE.txt  main.3a8cf1b4c60d20e70301.es5.js  main.3a8cf1b4c60d20e70301.es5.js.LICENSE.txt  main.49a22b315f605f2ba654.es5.js  main.49a22b315f605f2ba654.es5.js.LICENSE  main.7635b8577957586f9809.esm.js  main.7635b8577957586f9809.esm.js.LICENSE  main.9af319e8fc03f3f0d53a.esm.js  main.9af319e8fc03f3f0d53a.esm.js.LICENSE  main.b24d265d5e268a412995.esm.js  main.b24d265d5e268a412995.esm.js.LICENSE.txt  (+34 more)
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/amd64/: Dockerfile.amd64  devcontainer.json
.devcontainer/arm64/: Dockerfile.arm64  devcontainer.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: check_build.yml  demo.yml  insiders.yml  main.yml  prerelease.yml
apps/cl-builder/: index.html  project.json  tailwind.config.js  tsconfig.app.json  vite.config.mts  vite.config.ts
apps/docs/: docusaurus.config.ts  eslint.config.js  package.json  project.json  sidebars.ts  tsconfig.app.json  tsconfig.json
apps/player/: index.html  jest.config.js  project.json  tsconfig.app.json  tsconfig.json  vite-env.d.ts  vite-test.config.ts  vite.config.demo.mts  vite.config.mts  vite.config.ts  webpack.config.js
apps/player-desktop/: index.html  project.json  tsconfig.app.json  tsconfig.json  vite-env.d.ts  vite.config.mts  vite.config.ts  webpack.config.js
apps/player-desktop-e2e/: cypress.json
apps/player-e2e/: .nycrc.json  cypress.config.js  cypress.json  project.json
apps/player-standalone/: declarations.d.ts  index.html  project.json  tsconfig.json  vite.config.mts  vite.config.ts
apps/qplayer/: jest.config.js  webpack.config.js
assets/: 7zz.es6-B5yI7SL2.js  7zz.es6-BQ8Bfk9l.js  7zz.es6-Bov7skm9.js  7zz.es6-Bte0wI8f.js  7zz.es6-CG3qd4O3.js  7zz.es6-CKcEqbLR.js  7zz.es6-CM-D_io1.js  7zz.es6-CPNmFteJ.js  7zz.es6-CvA3dpO-.js  7zz.es6-DAIlG6-T.js  7zz.es6-DXY_v5FO.js  7zz.es6-DakXNYIU.js  7zz.es6-ObfhHVlB.js  7zz.es6-Qf8sg3ml.js  7zz.es6-hHtCdnYb.js  7zz.es6-ix8p1unY.js  7zz.es6-qIaVK2va.js  7zz.es6-zOlncrjz.js  __vite-browser-external_module-AZsYBS-F.js  debug-panel-COLHb39I.js  debug-panel-D4_n17bj.js  debug-panel-DMSTMs-G.js  debug-panel-WdNhSIiA.js  index-0InRsOOa.css  index-0u_WUAPp.css  index-11sTI2kB.js  index-2O0WsbU3.css  index-3gqyGD0x.js  index-7G_wmaTn.js  index-ADvuuIBp.js  index-B-51irCu.css  index-B3YPvsUQ.js  index-B6NdU9bI.js  index-BU0t7ujj.js  index-BmbaDxoB.js  index-C-2lbgXW.js  index-C0OhpB2P.js  index-Cbu2c9J0.js  index-CgOExpmx.css  index-ChgHsTpf.js  (+52 more)
demo/game/: game.cfg
libs/aero/: README.md  jest.config.js  jest.config.ts  project.json  tsconfig.spec.json
libs/audio/: README.md  jest.config.js  jest.config.ts  project.json
libs/browser/: README.md  eslint.config.js  project.json
libs/browser-window-manager/: README.md  eslint.config.js  project.json
libs/classic/: README.md  jest.config.js  jest.config.ts  project.json
libs/components/: README.md  jest.config.ts  project.json
libs/config/: jest.config.js
libs/contracts/: README.md  project.json
libs/qsp-wasm/src/qsplib/: CMakeLists-qsp.txt.in  CMakeLists.txt
libs/qsp-wasm/src/qsplib/public/: qsp-wasm.d.ts  qsp-wasm.js  qsp-wasm.wasm  types.ts
libs/qsp-wasm/src/qsplib/src/: qsp_wasm.c  qsp_wasm_callbacks.c
qspider-assets/: main.css  scroll.css
src-tauri/: Cargo.toml  Tauri.toml  standalone.conf.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/lang/: Ukrainian.nsh
src-tauri/src/: main.rs
test-assets/: game.cfg
themes/: aero.css  aero.html  classic.css  classic.html  common.css
tools/: autoupdater-version-updater.cjs  autoupdater-version-updater.js  build-wasm.sh  cargo-version-updater.cjs  cargo-version-updater.js  tauri-version-updater.js
(+692 files in other folders)
