[package]
name = "qspider"
version = "1.1.0"
description = "qSpider - player for QSP games"
authors = ["srg.kostyrko@gmail.com"]
license = "MIT"
repository = ""
default-run = "qspider"
edition = "2018"
build = "src/build.rs"

[build-dependencies.tauri-build]
version = "1.5.3"
features = ["config-toml"]

[dependencies]
serde_json = "1.0"
entity-tag = "0.1.5"
mime_guess = "2.0.3"
urlencoding = "2.1.0"

[dependencies.tauri-plugin-window-state]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tauri]
version = "1.7.1"
features = [
  "api-all",
  "cli",
  "devtools",
  "icon-png",
  "icon-ico",
  "updater",
  "config-toml",
]

[dependencies.uuid]
version = "1.5.0"
features = ["serde", "v4"]

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
strip = true      # Remove debug symbols
